--- a/trunk/LaTeX/Skal sættes i rapport/synopsis.tex
+++ b/trunk/LaTeX/Skal sættes i rapport/synopsis.tex
@@ -4,4 +4,4 @@ The solution will be a program based on the programming language C#. There will 
 \newline
 One of the last chapters will concern the testing and conclusion of the finished program. What could have been done better to the program and why does it not work, if that is the case. This chapter will also concern the reflection on the product to see if it actually solves the problem or why it does not solve the problem.
 \newline
-The product of the project is a program that helps the user pack a suitcase efficiently, and through a 3D image of the packed suitcases the user will see where in the suitcase each item must be put.
+The product of the project is a program that helps the user pack a suitcase efficiently, and through a 3D-image of the packed suitcases the user will see where in the suitcase each item must be put.
