--- a/trunk/LaTeX/Klar til at blive rettet af andre/ThePackingAlgorithmCode.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/ThePackingAlgorithmCode.tex
@@ -19,7 +19,7 @@ The class luggage\_item is for the items to pack in the luggage. The class diagr
 The luggage class and the luggage\_item class is used in the program with a list. These lists of the classes is made by the initialization of the program as seen on Listing , and is passed thought to the other form. These lists contains the information of every suitcase, item and the result of the packing.
 \kode{The initialization of the list containing the suitcases and luggages. (From the Main form)}{listini}{ListOfClass.txt}
 \subsection{Description of the code}
-The algorithm to pack has been develloped from the flowchart on Figure \ref{fig:flowalgo}. The following will describe the code and the extensions of the flowchart.
+The algorithm to pack has been developed from the flowchart on Figure \ref{fig:flowalgo}. The following will describe the code and the extensions of the flowchart.
 \subsubsection{Reset and Sorting}
 As seen on the figure, the first thing which is done is to sort the suitcases and the items. Before sorting the suitcases and luggages, it resets the values changes when packing. This is to ensure the algorithm has the right values when running it twice. The reset methods for the items and the suitcases are in their respective classes as seen on Figure \ref{fig:lugclass} and Figure \ref{fig:lugitemclass}. A loop will call the reset methods in all suitcases and items in the lists. This is for example to reset the value of where there are saved items in the luggage. The items and luggage is also rotated so the luggage has the longest side as width as seen on Listing \ref{list:RotateLug}. This is done, so the algorithm packs as optimal as possible. The items is likewise rotated, so the height is the smallest side. This will ensure that the algorithm will try to pack items lying, and not upright.
 \kode{The code to rotate the luggage until the longest side is the width. The rotation is made by switching the values of 2 sides. (From the luggage class in the Main form.)}{lugrotate}{RotateLug.txt}
@@ -34,11 +34,11 @@ If the item cannot be fitted in the point in the luggage, the item will be rotat
 \subsubsection{Placing the item}
 If the item could not be packed in any suitcase, it will be added to a list of not packed items, which will be printed to the user later on. It will then be removed from the packing list, and the next item will be packed. If the item could be packed, it will be tried to move it lower in the suitcase until it meet another item in the check\_for\_space\_z in the luggage class. This will ensure an optimal packing. The item will then be packed in the suitcase be adding 1 to the value in every point the item will fill out in the suitcase, using the place\_item method in the luggage class. The packing points is saved to the item, so it have the information of, where it is saved. This is done by the function save\_item from the luggage\_item class. The corners of the item is added to the list of packing points, and the list is sorted. The item is now saved and the next item can be packed.
 \subsubsection{When every item is packed}
-When all items have been packed (or placed in the list of not packed items), T´the next step in the algorithm is to generate the colors each item should be display with in the 3D Viewer. This code can be seen in section \fxfatal{ret section}.
+When all items have been packed (or placed in the list of not packed items), the next step in the algorithm is to generate the colors each item should be display with in the 3D Viewer. This code can be seen in section \fxfatal{ret section}.
 The algorithm will at the end check if there has been a mistake during packing, so one of the values in the luggage has exceed 1. If it has, it will throw an exception. It will then check, if some of the items could not be packed. This will show an error message to the user, with the information of which elements which could not be packed as seen on Listing \ref{CheckForError}.
 \kode{The code will return an error message to the user if some items could not be packed (from the method check\_error\_after\_packing in the form Main)}{CheckForError}{ErrorMessage.txt}
 
 \subsection{Round up}
-The algorithm checks for a lot of different criteria, also a few more than descibed here. This will ensure a optimal packing of the items, so the most posible number of item can be fitted in the luggage. The algorithm has therefore been extended since the first design in section \ref{sec:algorithm}. The extended, but still a bit simplified, flowchart can be seen on Figure \ref{fig:flowexalgo}.
+The algorithm checks for a lot of different criteria, also a few more than described here. This will ensure a optimal packing of the items, so the most possible number of item can be fitted in the luggage. The algorithm has therefore been extended since the first design in section \ref{sec:algorithm}. The extended, but still a bit simplified, flowchart can be seen on Figure \ref{fig:flowexalgo}.
 
 \figur{1}{FlowOfAlgorithmFull.jpg}{The flowchart for the packing algorithm}{fig:flowexalgo}
