--- a/trunk/LaTeX/Skal sættes i rapport/Perspectivation.tex
+++ b/trunk/LaTeX/Skal sættes i rapport/Perspectivation.tex
@@ -1,16 +1,16 @@
 \subsection{Perspectivation}
-When working with problem solving it is also important to look at how the user will use and interact with the solution. Through these assumptions a better solution can be form that is more user friendly. Therefore it is a good thing to know who are going to use the solution, and from that design it more thoughtfully.
+When working with problem solving it is also important to look at how the user will use and interact with the solution. Through these assumptions a better solution can be formed that is more user friendly. Therefore it is a good thing to know who are going to use the solution, and from that design it more thoughtfully.
 
-The purpose in this project was to make a program that provided the user with a packing solution and help the users to pack a suitcase more effectively. The program should also control that the weight of the suitcase does not exceed the limits given by the user. The program is made in visual studio that provides the developer with a lot of good tools to make an user interface for the user of the program.
+The purpose in this project was to make a program that provided the user with a packing solution and help the users to pack a suitcase more effectively. The program should also control that the weight of the suitcase does not exceed the limits given by the user. The program is made in "Visual Studio" that provides the developer with a lot of good tools to make an user interface for the user of the program.
 This makes the program a lot more user friendly because the user easier can interact with the program. This means that it will be a lot easier for the user to operate the program and thereby the program have bigger chance to sell if it were the intention.
 The user interface also means that the user do not need understand the program before they can use it.
-The program in this project also supports mouse control, that means that user can use his/her mouse to navigate around in the program. Because of the mouse support, and the good interface the user have less chance to fail in using the program, but by implementing an interface there is a risk for new bugs and misunderstandings in the formulations in the interface.
+The program in this project also supports mouse control, that means that user can use his/her mouse to navigate around in the program. Because of the mouse support, and the good interface the user has less chance to fail in using the program, but by implementing an interface there is a risk for new bugs and misunderstandings in the formulations in the interface.
 Therefore it is important to make a clean and user friendly interface that only contains the necessary buttons and well formulated text that helps the user by informing about what they should do, and which unit the data is in.
 
 To prepare the program and try to find eventual problems, the program has undergone some tests, where people who have not worked with the project have tried the program. Their experiences from the test were then collected and used to evaluate the program. The evaluation then led to changes that would make the program better. After the changes were made, the program were tested again with the changes and the same procedure of the test result as the earlier test.
 This process of repeated testing is a good procedure to develop a working program because the potential user gets to use it and experiences are made in context to the use. These experiences are then used to make the program more suited for the target audience. The downside of this procedure is that it takes a lot of man hours to do the testing and make the changes. Therefore testing is a good but expensive tool, hour-wise, to use.
 It should always be taken into consideration to test the program, because it is important that the program is freed of the worst bugs when released. Program bugs on releases have a negative influence on the programs sale and might scare of potential purchasers.
 
-A side effect from making the program in Visual Studio is that the program only can run on Windows (Microsoft's operating system) with the .NET framework installed. The reason is that the program uses the .NET framework which only are supported by Microsoft's operating systems.
+A side effect from making the program in "Visual Studio" is that the program only can run on Windows (Microsoft's operating system) with the .NET framework installed. The reason is that the program uses the .NET framework which only are supported by Microsoft's operating systems.
 This means that it is important to take a moment before developing and make a thought regarding what platform the program should be used on or better yet, if it should be able to run cross platforms.
-These different experience made in this project can be used in upcoming project.
+These different experience made in this project can be used in upcoming projects.
