--- a/trunk/LaTeX/Undervejs/Discussion.tex
+++ b/trunk/LaTeX/Undervejs/Discussion.tex
@@ -21,12 +21,12 @@ And there also were some Optional Features that if there where time left those a
 \item Type of trip
 \end{itemize}
 
-The program is based on the requirements and the test that have been made on the program. The test have help with design of the program and a few function in the program that have made big improvement on the program itself. The improvement of the program by going through a serial of test can be seen in section \ref{sec:test}.
+The program is based on the requirements and the test that have been made on the program. The test have help with design of the program and a few function in the program that have made big improvement on the program itself. The improvement of the program by going through a serial of test can be seen in chapter \ref{chap:testing}.
 
-In section \ref{sec:devalgorithm} are the algorithm explained that Distribute the items in the suitcase evenly by looking at there weigh and space. the algorithm also make sure that the limit that the bags can weigh is not exceed. Yet the algorithm can not pack as good as a person might be able to do.
+In section \ref{sec:devalgorithm} are the algorithm explained that Distribute the items in the suitcase evenly by looking at there weigh and space. the algorithm also make sure that the limit that the bags can weigh is not exceed. Yet the algorithm can not pack as good as a person might be able to do. Because is pack the items as they where boxes and since most items in a suitcase are clothes that can be bend, rolled and squashed together to fit in the suitcase.
 
-To help the user to get a better visual understanding on how to pack the suitcase a 3D image is made for the user that can rotate zoom and make bold explanation of this function can be seen in section \ref{3DHandle}. To help the user even more there is a algorithm that make sure that 2 item next to one each other have different colours that do it is more easily to see where the items are from each other, the way this function work can be seen in section \ref{sec:ColorGiver}.
+To help the user to get a better visual understanding on how to pack the suitcase a 3D image is made for the user that can rotate zoom and make bold explanation of this function can be seen in section \ref{3DHandle}. The user more help there is a algorithm that make sure that 2 item next to one each other have different colours that do it is more easily to see where the items are from each other, the way this function work can be seen in section \ref{sec:ColorGiver}.
 
-The program interface of the program is easy to get a overview over because the maximum numbers of buttons is 5 at all the different windows there are in the program. the window where the 3D is shown also is user friendly because one can use the mouse to zoom and rotate the Figure that is the suitcase. The program also sets items in the suitcase in a way that it is easy to pack the suitcase in real-life. the Section where the interface is described is \ref{sec:GUI}.
+The program interface is easy to get a overview over because the maximum numbers of buttons is 5 at all the different windows in the program. the window where the 3D is shown also is user friendly because one can use the mouse to zoom and rotate the Figure that is the suitcase. The program also sets items in the suitcase in a way that it is easy to pack the suitcase in real-life. the Section where the interface is described is \ref{sec:GUI}.
 
-To help the user the data that have been made over the items and suitcase can be made or save into a file that also can be loaded by the program to get the data. There is different way to save data one is to use windows SQL database whit where not ideally because it need a SQL handling program or internet connection to use. Therefore there is use a File serializer that make a file with the data. This is useful because it make it easily to choose where the data should be save into the data file or with data file should be load into the program.
+The user can make or save into a file that also can be loaded by the program to get the data that are in the file. There is different way to save data one is to use windows SQL database that where not ideally because it need a SQL handling program or internet connection to use. Therefore there is use a File serializer that make a file with the data. This is useful because it make it easily to choose where the data should be save into the data file or with data file should be load into the program.
